--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Briks Braker Game</title>
-    <script src="script.js"></script>
+    <script src="p5.min.js"></script>
+   <script src="script.js"></script>
 </head>
 <body>
     
