--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Briks Braker Game</title>
     <script src="p5.min.js"></script>
    <script src="script.js"></script>
+   <script src="smVlad.js"></script>
 </head>
 <body>
     
