--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="p5.min.js"></script>
    <script src="script.js"></script>
    <script src="smVlad.js"></script>
+   <script src="smilyStefasn.js"></script>
 </head>
 <body>
     
