--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Briks Braker Game</title>
-    <script src="p5.min.js"></script>
-   <script src="script.js"></script>
-   <script src="smVlad.js"></script>
-   <script src="smilyStefasn.js"></script>
-   <script src="smFilip.js"></script>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Quoridor</title>
 </head>
 <body>
-    
+  <script src="p5.min.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
